tests/macros/confirm/validate_on_key.stderr
error: option `validate_on_key` does not exist for kind `confirm`
 --> tests/macros/confirm/validate_on_key.rs:2:45
  |
2 |     let q = requestty::questions![Confirm { validate_on_key: todo!() }];
  |                                             ^^^^^^^^^^^^^^^
