tests/macros/confirm/validate_on_key.rs
fn main() {
    let q = requestty::questions![Confirm { validate_on_key: todo!() }];
}
